# TRPS

./: CMakeLists.txt  DBDbatch_test.mac  GNUmakefile  GPSbatch_AlphaOnCenter.mac  GPSbatch_BulkAlpha.mac  GPSbatch_BulkTeDBD.mac  GPSbatch_Bulke.mac  GPSbatch_Hurley1.mac  GPSbatch_Hurley2.mac  GPSbatch_SurfAlpha.mac  README.md  TRPSBox.cc
CrystalMaps/Te/: config.txt  notes.txt
CrystalMaps/ZnSe/: config.txt
Tools/CrystalCalculator/: GeGroupVelocity.py  GeVelocities.py  Gerun.py  TeO2Velocities.py  Terun.py  ZnSeVelocities.py  continuum.py  slownessGe.py  slownessTeO2.py  slownessZnSe.py
include/: DBDPrimaryGenerator.hh  DBDPrimaryGeneratorAction.hh  DetectorConstruction.hh  EventAction.hh  EventActionMessenger.hh  EventR.hh  PhononExcitation.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  RunMessenger.hh  SteppingAction.hh  TESHit.hh  TESSensitivity.hh  TRPSLatticeLogical.hh  TRPSPhysicsList.hh  TRPSPrimaryGenerator.hh  TRPSPrimaryGeneratorAction.hh  TRPSTree.hh  TeO2DetectorConstruction.hh  ZnSeDetectorConstruction.hh
src/: DBDPrimaryGenerator.cc  DBDPrimaryGeneratorAction.cc  DetectorConstruction.cc  EventAction.cc  EventActionMessenger.cc  EventR.cc  PhononExcitation.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  RunMessenger.cc  SteppingAction.cc  TESHit.cc  TESSensitivity.cc  TRPSPhysicsList.cc  TRPSPrimaryGenerator.cc  TRPSPrimaryGeneratorAction.cc  TRPSTree.cc  TeO2DetectorConstruction.cc  ZnSeDetectorConstruction.cc
